--- a/mobile/TelematicsApp/package.json
+++ b/mobile/TelematicsApp/package.json
@@ -16,7 +16,9 @@
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-background-geolocation": "^5.0.3",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-sensors": "^7.3.6",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
