--- a/mobile/TelematicsApp/android/app/build.gradle
+++ b/mobile/TelematicsApp/android/app/build.gradle
@@ -84,8 +84,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        ndk {
-        abiFilters "arm64-v8a"
+    }
+    
+    splits {
+        abi {
+            enable false
         }
     }
     signingConfigs {
@@ -106,7 +109,13 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            shrinkResources false
         }
+    }
+    
+    packagingOptions {
+        pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/arm64-v8a/libfbjni.so'
     }
 }
 
