--- a/mobile/TelematicsApp/package.json
+++ b/mobile/TelematicsApp/package.json
@@ -10,12 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.0.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native/new-app-screen": "0.83.1",
     "axios": "^1.13.4",
     "react": "19.2.0",
     "react-native": "0.83.1",
-    "react-native-background-geolocation": "^5.0.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-sensors": "^7.3.6",
     "rxjs": "^7.8.2"
