--- a/mobile/TelematicsApp/android/app/build.gradle
+++ b/mobile/TelematicsApp/android/app/build.gradle
@@ -84,6 +84,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        // Build all ABIs so emulator (x86_64) and arm64 devices get correct native libs
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
     }
     
     splits {
